--- a/StoryEngine/StoryEngine.csproj
+++ b/StoryEngine/StoryEngine.csproj
@@ -48,12 +48,18 @@
     <Compile Include="Events\IEvent.cs" />
     <Compile Include="Outcomes\IOutcome.cs" />
     <Compile Include="Outcomes\AOutcome.cs" />
+    <Compile Include="Plot.cs" />
     <Compile Include="Prerequisites\APrerequisite.cs" />
     <Compile Include="Prerequisites\IPrerequisite.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relationship.cs" />
     <Compile Include="SocietyGenerators\IRandomCharacterGenerator.cs" />
     <Compile Include="SocietyGenerators\IRelationshipGenerator.cs" />
+    <Compile Include="SocietyGenerators\IStartingCastGenerator.cs" />
+    <Compile Include="SocietyGenerators\RandomCharacterGenerator_Default.cs" />
+    <Compile Include="SocietyGenerators\RandomNameSelector.cs" />
+    <Compile Include="SocietyGenerators\RelationshipGenerator_Default.cs" />
+    <Compile Include="SocietyGenerators\StartingCastGenerator_Default.cs" />
     <Compile Include="SocietySnapshot.cs" />
     <Compile Include="_PlotGenerators\IPlotGenerator.cs" />
   </ItemGroup>
