--- a/StoryEngine/StoryEngine.csproj
+++ b/StoryEngine/StoryEngine.csproj
@@ -40,12 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\IncidentLibrary.cs" />
     <Compile Include="ParticipantRole.cs" />
     <Compile Include="Outcomes\PossibleOutcome.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Enums.cs" />
-    <Compile Include="Events\AEvent.cs" />
-    <Compile Include="Events\IEvent.cs" />
+    <Compile Include="Events\AIncident.cs" />
+    <Compile Include="Events\IIncident.cs" />
     <Compile Include="Outcomes\IOutcome.cs" />
     <Compile Include="Outcomes\AOutcome.cs" />
     <Compile Include="Plot.cs" />
