1) Implementing basic trust outcomes. 2) Move relationship generator object to be static within character class (so that new relations can be created as the plot is assembled, via the same method they were for the initial/starting relations.) 3) Renamed PossibleOutcome object to make it more distinct from Outcome objects.

--- a/StoryEngine/StoryEngine.csproj
+++ b/StoryEngine/StoryEngine.csproj
@@ -41,8 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Events\IncidentLibrary.cs" />
+    <Compile Include="Outcomes\MultiOutcome.cs" />
+    <Compile Include="Outcomes\Outcome_ChangeTrust.cs" />
+    <Compile Include="Outcomes\Outcome_ChangeTrust_Divergent.cs" />
+    <Compile Include="Outcomes\Outcome_ChangeTrust_Mutual.cs" />
     <Compile Include="ParticipantRole.cs" />
-    <Compile Include="Outcomes\PossibleOutcome.cs" />
+    <Compile Include="PossibleResult.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Events\AIncident.cs" />
