--- a/StoryEngine/StoryEngine.csproj
+++ b/StoryEngine/StoryEngine.csproj
@@ -57,9 +57,9 @@
     <Compile Include="Prerequisites\ACrossRolePrerequisite.cs" />
     <Compile Include="Prerequisites\APrerequisite.cs" />
     <Compile Include="Prerequisites\ARolePrerequisite.cs" />
-    <Compile Include="Prerequisites\DirectionalTrust.cs" />
+    <Compile Include="Prerequisites\Prereq_DirectionalRelation.cs" />
     <Compile Include="Prerequisites\IPrerequisite.cs" />
-    <Compile Include="Prerequisites\MutualTrust.cs" />
+    <Compile Include="Prerequisites\Prereq_MutualTrust.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relationship.cs" />
     <Compile Include="SocietyGenerators\IRandomCharacterGenerator.cs" />
