--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -41,9 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mocks\Mock_Prereqs.cs" />
     <Compile Include="UtCharacter.cs" />
     <Compile Include="UtIncident.cs" />
     <Compile Include="UtOutcome.cs" />
+    <Compile Include="UtPrerequisite_CrossRole.cs" />
+    <Compile Include="UtPrerequisite_OneRole.cs" />
     <Compile Include="UtRelationship.cs" />
     <Compile Include="UtRole.cs" />
     <Compile Include="zScratchPaper.cs" />
