--- a/StoryEngine/StoryEngine.csproj
+++ b/StoryEngine/StoryEngine.csproj
@@ -40,8 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Incidents\IncidentLibrary.cs" />
+    <Compile Include="Incidents\IncidentTemplateCollection.cs" />
     <Compile Include="Incidents\Incident.cs" />
+    <Compile Include="Incidents\TemplateForIncident.cs" />
     <Compile Include="Outcomes\Outcome_ChangeTrust.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="PossibleResult.cs" />
