--- a/StoryEngine/StoryEngine.csproj
+++ b/StoryEngine/StoryEngine.csproj
@@ -48,7 +48,7 @@
     <Compile Include="Role.cs" />
     <Compile Include="PossibleResult.cs" />
     <Compile Include="Character.cs" />
-    <Compile Include="Enums.cs" />
+    <Compile Include="Enums_Relationships.cs" />
     <Compile Include="Incidents\AIncident.cs" />
     <Compile Include="Incidents\IIncident.cs" />
     <Compile Include="Outcomes\IOutcome.cs" />
@@ -62,6 +62,7 @@
     <Compile Include="Prerequisites\Prereq_MutualTrust.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relationship.cs" />
+    <Compile Include="SerializeXML.cs" />
     <Compile Include="SocietyGenerators\IRandomCharacterGenerator.cs" />
     <Compile Include="SocietyGenerators\IRelationshipGenerator.cs" />
     <Compile Include="SocietyGenerators\IStartingCastGenerator.cs" />
