Refactoring by adding base abstract class for objects with probability. Used currently for "PossibleResult" and "CollectionOfIncidentTemplates" objects.

--- a/StoryEngine/StoryEngine.csproj
+++ b/StoryEngine/StoryEngine.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AObjectWithProbability.cs" />
     <Compile Include="Enums\Enums_Characters.cs" />
     <Compile Include="Enums\Enums_Incidents.cs" />
     <Compile Include="Incidents\CollectionOfIncidentTemplates.cs" />
