--- a/StorySkeleton/StorySkeletonUI.csproj
+++ b/StorySkeleton/StorySkeletonUI.csproj
@@ -69,6 +69,9 @@
     <Compile Include="ViewModels\PlotVM.cs" />
     <Compile Include="ViewModels\SocietyVM.cs" />
     <Compile Include="ViewModels\ViewModel_Base.cs" />
+    <Compile Include="Views\Incidents\IncidentView.xaml.cs">
+      <DependentUpon>IncidentView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\PlotGeneratorView.xaml.cs">
       <DependentUpon>PlotGeneratorView.xaml</DependentUpon>
     </Compile>
@@ -81,17 +84,14 @@
     <Compile Include="Views\Characters\NewCharacterView.xaml.cs">
       <DependentUpon>NewCharacterView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\Incidents\IncidentDetailView.xaml.cs">
-      <DependentUpon>IncidentDetailView.xaml</DependentUpon>
+    <Compile Include="Views\Incidents\IncidentTemplateView.xaml.cs">
+      <DependentUpon>IncidentTemplateView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Incidents\IncidentLibraryView.xaml.cs">
       <DependentUpon>IncidentLibraryView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PlotOverview.xaml.cs">
       <DependentUpon>PlotOverview.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Incidents\RawTextView.xaml.cs">
-      <DependentUpon>RawTextView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Trends\RelationshipTrendView.xaml.cs">
       <DependentUpon>RelationshipTrendView.xaml</DependentUpon>
@@ -108,6 +108,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\Incidents\IncidentView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\PlotGeneratorView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -124,7 +128,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Incidents\IncidentDetailView.xaml">
+    <Page Include="Views\Incidents\IncidentTemplateView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -133,10 +137,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\PlotOverview.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Incidents\RawTextView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
