Adding character details to random character generation

--- a/StoryEngine/StoryEngine.csproj
+++ b/StoryEngine/StoryEngine.csproj
@@ -80,6 +80,28 @@
     <Compile Include="SocietyGenerators\StartingCastGenerator_Default.cs" />
     <Compile Include="SocietySnapshot.cs" />
     <Compile Include="Specifics\ASpecific.cs" />
+    <Compile Include="Specifics\CharacterDetails\Appearance.cs" />
+    <Compile Include="Specifics\CharacterDetails\Appearance\Age.cs" />
+    <Compile Include="Specifics\CharacterDetails\Appearance\Beauty.cs" />
+    <Compile Include="Specifics\CharacterDetails\Appearance\Dexterity.cs" />
+    <Compile Include="Specifics\CharacterDetails\Appearance\Grooming.cs" />
+    <Compile Include="Specifics\CharacterDetails\Appearance\Height.cs" />
+    <Compile Include="Specifics\CharacterDetails\Appearance\Strength.cs" />
+    <Compile Include="Specifics\CharacterDetails\Appearance\Weight.cs" />
+    <Compile Include="Specifics\CharacterDetails\Background.cs" />
+    <Compile Include="Specifics\CharacterDetails\Background\BornClass.cs" />
+    <Compile Include="Specifics\CharacterDetails\Background\CurrentClass.cs" />
+    <Compile Include="Specifics\CharacterDetails\Background\WorkExperience.cs" />
+    <Compile Include="Specifics\CharacterDetails\Motivation.cs" />
+    <Compile Include="Specifics\CharacterDetails\Motivation\CoreDesire.cs" />
+    <Compile Include="Specifics\CharacterDetails\Motivation\Enjoys.cs" />
+    <Compile Include="Specifics\CharacterDetails\Personality.cs" />
+    <Compile Include="Specifics\CharacterDetails\Personality\Charisma.cs" />
+    <Compile Include="Specifics\CharacterDetails\Personality\Intelligence.cs" />
+    <Compile Include="Specifics\CharacterDetails\Personality\SpeechStyle.cs" />
+    <Compile Include="Specifics\CharacterDetails\Personality\SocialOpenness.cs" />
+    <Compile Include="Specifics\CharacterDetails\Personality\Wisdom.cs" />
+    <Compile Include="Specifics\CharacterSpecifics.cs" />
     <Compile Include="Specifics\Setting.cs" />
     <Compile Include="Specifics\Setting\Location.cs" />
     <Compile Include="Specifics\Setting\TimeOfDay.cs" />
